# codora-core

./: Cargo.toml  README.md
crates/codora-core/: Cargo.toml
crates/codora-core/src/: lib.rs
